--- a/.github/build_deploy.yml
+++ b/.github/build_deploy.yml
@@ -1,9 +1,10 @@
-name: Build and Deploy Flasher
+name: Build & Deploy Web Flasher
 
 on:
   push:
     paths:
-      - 'src/**' # Trigger on changes to payloads
+      - 'src/**'
+      - '*.ino'
   workflow_dispatch:
 
 permissions:
@@ -15,86 +16,90 @@ jobs:
   compile:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Install Arduino CLI
         uses: arduino/setup-arduino-cli@v1
 
-      - name: Install Core
+      - name: Install Digispark Core
         run: |
           arduino-cli config init
           arduino-cli config add board_manager.additional_urls http://digistump.com/package_digistump_index.json
           arduino-cli core update-index
           arduino-cli core install digistump:avr
 
-      - name: Compile Windows Payload
+      - name: Compile Firmware
         run: |
-          # We compile the main sketch, but we need to ensure the correct payload header is selected.
-          # For this demo, we assume the user edits the files in src/
-          arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/windows ./src/1_windows
-          mv ./build/windows/*.hex ./build/payload_windows.hex
+          mkdir -p build
+          # Compile the root sketch which pulls in the src/ files
+          arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build .
+          mv ./build/*.hex ./build/roulette.hex
 
-      # (Repeat for Mac/Linux or make a loop if you want all 3)
-
-      - name: Upload Hex Artifacts
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: firmware
-          path: ./build/*.hex
+          path: ./build/roulette.hex
 
-  deploy-web-flasher:
+  deploy-flasher:
     needs: compile
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Web Flasher Code
-        uses: actions/checkout@v3
-        
       - name: Download Firmware
         uses: actions/download-artifact@v4
         with:
           name: firmware
           path: ./public/firmware
 
-      - name: Create Web Flasher HTML
+      - name: Generate Web Flasher
         run: |
           mkdir -p public
-          # We are creating the index.html on the fly to include the firmware links
           cat <<EOF > public/index.html
           <!DOCTYPE html>
-          <html>
+          <html lang="en">
           <head>
-            <title>Classroom Weaponizer</title>
-            <script src="https://cdn.jsdelivr.net/npm/micronucleus@0.1.0/dist/micronucleus.min.js"></script>
+            <meta charset="UTF-8">
+            <title>Roulette Armory</title>
+            <script src="https://cdn.jsdelivr.net/gh/skandhurkat/micronucleus-web@master/lib/micronucleus.js"></script>
+            <style>
+              body { background: #000; color: #0f0; font-family: 'Courier New', monospace; text-align: center; margin-top: 10%; }
+              button { background: #000; color: #f00; border: 2px solid #f00; padding: 20px 40px; font-size: 24px; cursor: pointer; margin-top: 20px; }
+              button:hover { background: #f00; color: #000; }
+              #log { margin-top: 20px; color: #fff; }
+            </style>
           </head>
-          <body style="background: #111; color: #0f0; font-family: monospace; text-align: center; padding-top: 50px;">
-            <h1>USB ARMORY</h1>
-            <p>1. Plug in Digispark.</p>
-            <p>2. Click Flash.</p>
-            <br>
-            <button id="flashBtn" style="padding: 20px; font-size: 24px; background: #000; color: #f00; border: 2px solid #f00; cursor: pointer;">ARM DEVICE</button>
-            <div id="status">Waiting...</div>
-
+          <body>
+            <h1>/// ROULETTE BADUSB ///</h1>
+            <p>1. Unplug Device.</p>
+            <p>2. Click ARM.</p>
+            <p>3. Plug in Device when prompted.</p>
+            <button id="flashBtn">ARM DEVICE</button>
+            <div id="log">Status: IDLE</div>
+            
             <script>
               document.getElementById('flashBtn').addEventListener('click', async () => {
-                const status = document.getElementById('status');
+                const log = document.getElementById('log');
                 try {
-                  status.innerText = "Requesting USB Access...";
-                  // Connect to device (Standard Digispark VID/PID)
+                  if (!navigator.usb) throw new Error("WebUSB not supported (Use Chrome/Edge)");
+                  
+                  log.innerText = "Status: DOWNLOADING FIRMWARE...";
+                  const resp = await fetch('./firmware/roulette.hex');
+                  if (!resp.ok) throw new Error("Firmware not found");
+                  const firmware = await resp.arrayBuffer();
+
+                  log.innerText = "Status: WAITING FOR DEVICE...";
                   const device = await navigator.usb.requestDevice({ filters: [{ vendorId: 0x16d0, productId: 0x0753 }] });
                   
-                  status.innerText = "Downloading Firmware...";
-                  const response = await fetch('./firmware/payload_windows.hex');
-                  const hexData = await response.arrayBuffer();
+                  log.innerText = "Status: FLASHING...";
+                  const client = new Micronucleus(device);
+                  await client.upload(new Uint8Array(firmware));
                   
-                  status.innerText = "Erasing & Flashing...";
-                  const nucleus = new Micronucleus(device);
-                  await nucleus.upload(hexData);
-                  
-                  status.innerText = "UPLOAD COMPLETE. UNPLUG NOW.";
-                  status.style.color = "#fff";
+                  log.innerText = "Status: COMPLETE. UNPLUG NOW.";
+                  log.style.color = "#0f0";
                 } catch (e) {
-                  status.innerText = "ERROR: " + e;
+                  log.innerText = "ERROR: " + e.message;
+                  log.style.color = "#f00";
                 }
               });
             </script>
