--- a/.github/factory.yml
+++ b/.github/factory.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Weaponizer (Convert & Combine)
+        # FIXED: Path correction (scripts/weaponizer.py)
         run: python3 scripts/weaponizer.py
 
       - name: Setup Arduino CLI
