--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,16 +31,33 @@ jobs:
       - name: Compile SINGLE LED Template
         run: |
           mkdir -p public
-          # Ensure Dual Mode is 0
-          sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' config.h
-          arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single .
+          # Create a staging area where Folder Name == File Name
+          mkdir -p build/single_env/Sketch
+          
+          # Copy source to the staging folder
+          cp TheRevolver.ino build/single_env/Sketch/Sketch.ino
+          cp config.h build/single_env/Sketch/config.h
+          
+          # Configure for SINGLE
+          sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/config.h
+          
+          # Compile the staging folder
+          arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
           cp ./build/single/*.hex ./public/roulette_single.hex
 
       - name: Compile DUAL LED Template
         run: |
-          # Ensure Dual Mode is 1
-          sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' config.h
-          arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual .
+          # Create a fresh staging area
+          mkdir -p build/dual_env/Sketch
+          
+          cp TheRevolver.ino build/dual_env/Sketch/Sketch.ino
+          cp config.h build/dual_env/Sketch/config.h
+          
+          # Configure for DUAL
+          sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/config.h
+          
+          # Compile
+          arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
           cp ./build/dual/*.hex ./public/roulette_dual.hex
 
       - name: Copy Web Interface
