--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,8 @@ jobs:
           
           # Compile the staging folder
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
-          cp ./build/single/*.hex ./public/roulette_single.hex
+          # FIXED: Wildcard copy caused errors when CLI generated bootloader hexes. Targeted specific file.
+          cp ./build/single/Sketch.ino.hex ./public/roulette_single.hex
 
       - name: Compile DUAL LED Template
         run: |
@@ -58,7 +59,7 @@ jobs:
           
           # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
-          cp ./build/dual/*.hex ./public/roulette_dual.hex
+          cp ./build/dual/Sketch.ino.hex ./public/roulette_dual.hex
 
       - name: Copy Web Interface
         run: cp index.html ./public/index.html
