--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,6 @@ jobs:
         uses: arduino/setup-arduino-cli@v1
 
       - name: Install Core
-        # FIXED: Switched to GitHub Raw URL because digistump.com is dead.
         run: |
           arduino-cli config init
           arduino-cli config add board_manager.additional_urls https://raw.githubusercontent.com/digistump/arduino-boards-index/master/package_digistump_index.json
@@ -31,26 +30,22 @@ jobs:
       - name: Compile SINGLE LED Template
         run: |
           mkdir -p public
-          # Create a staging area where Folder Name == File Name
           mkdir -p build/single_env/Sketch
-          
-          # Copy source to the staging folder
           cp TheRevolver.ino build/single_env/Sketch/Sketch.ino
           cp config.h build/single_env/Sketch/config.h
           
           # Configure for SINGLE
           sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/config.h
           
-          # Compile the staging folder
+          # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
-          # FIXED: Wildcard copy caused errors when CLI generated bootloader hexes. Targeted specific file.
-          cp ./build/single/Sketch.ino.hex ./public/roulette_single.hex
+          
+          # ROBUST COPY: Find the .hex file that is NOT the bootloader and copy it.
+          find ./build/single -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./public/roulette_single.hex \;
 
       - name: Compile DUAL LED Template
         run: |
-          # Create a fresh staging area
           mkdir -p build/dual_env/Sketch
-          
           cp TheRevolver.ino build/dual_env/Sketch/Sketch.ino
           cp config.h build/dual_env/Sketch/config.h
           
@@ -59,7 +54,9 @@ jobs:
           
           # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
-          cp ./build/dual/Sketch.ino.hex ./public/roulette_dual.hex
+          
+          # ROBUST COPY
+          find ./build/dual -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./public/roulette_dual.hex \;
 
       - name: Copy Web Interface
         run: cp index.html ./public/index.html
