--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,10 +38,24 @@ jobs:
           sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/config.h
           
           # Compile
+          echo "Compiling Single..."
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
           
-          # ROBUST COPY: Find the .hex file that is NOT the bootloader and copy it.
-          find ./build/single -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./public/roulette_single.hex \;
+          # DEBUG: List files to see what we actually got
+          echo "Listing build directory:"
+          ls -R build/single
+          
+          # COPY
+          # We look for the file ending in .hex that does NOT contain 'bootloader'
+          HEX_FILE=$(find ./build/single -maxdepth 1 -name "*.hex" ! -name "*bootloader*" | head -n 1)
+          
+          if [ -z "$HEX_FILE" ]; then
+            echo "::error::SINGLE LED HEX FILE NOT FOUND!"
+            exit 1
+          fi
+          
+          echo "Found Payload: $HEX_FILE"
+          cp "$HEX_FILE" ./public/roulette_single.hex
 
       - name: Compile DUAL LED Template
         run: |
@@ -53,10 +67,19 @@ jobs:
           sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/config.h
           
           # Compile
+          echo "Compiling Dual..."
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
           
-          # ROBUST COPY
-          find ./build/dual -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./public/roulette_dual.hex \;
+          # COPY
+          HEX_FILE=$(find ./build/dual -maxdepth 1 -name "*.hex" ! -name "*bootloader*" | head -n 1)
+          
+          if [ -z "$HEX_FILE" ]; then
+             echo "::error::DUAL LED HEX FILE NOT FOUND!"
+             exit 1
+          fi
+          
+          echo "Found Payload: $HEX_FILE"
+          cp "$HEX_FILE" ./public/roulette_dual.hex
 
       - name: Copy Web Interface
         run: cp index.html ./public/index.html
