--- a/.github/workflows/build_firmware.yml
+++ b/.github/workflows/build_firmware.yml
@@ -61,10 +61,11 @@ jobs:
           # Extract
           find ./build/dual -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./dist/roulette_dual.hex \;
 
-      - name: Deploy Ammo to Armory
+      - name: Ship to Bunker
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
-          keep_files: true  # CRITICAL: Don't delete index.html
-          commit_message: "Reload: Updated Firmware Artifacts"
+          destination_dir: firmware  # CRITICAL: Isolate artifacts
+          keep_files: true
+          commit_message: "Reload: Factory Output -> /firmware"
