--- a/.github/workflows/build_firmware.yml
+++ b/.github/workflows/build_firmware.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup Arduino CLI
         uses: arduino/setup-arduino-cli@v1
 
-      - name: Install Digispark Core
+      - name: Install Core
         run: |
           arduino-cli config init
           arduino-cli config add board_manager.additional_urls https://raw.githubusercontent.com/digistump/arduino-boards-index/master/package_digistump_index.json
@@ -35,13 +35,10 @@ jobs:
           mkdir -p build/single_env/Sketch
           cp TheRevolver.ino build/single_env/Sketch/Sketch.ino
           cp config.h build/single_env/Sketch/config.h
-          
           # Patch Config
           sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/config.h
-          
           # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
-          
           # Extract
           find ./build/single -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./dist/roulette_single.hex \;
 
@@ -51,13 +48,10 @@ jobs:
           mkdir -p build/dual_env/Sketch
           cp TheRevolver.ino build/dual_env/Sketch/Sketch.ino
           cp config.h build/dual_env/Sketch/config.h
-          
           # Patch Config
           sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/config.h
-          
           # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
-          
           # Extract
           find ./build/dual -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./dist/roulette_dual.hex \;
 
@@ -65,7 +59,7 @@ jobs:
         run: |
           if [ ! -f ./dist/roulette_single.hex ]; then echo "SINGLE HEX MISSING"; exit 1; fi
           if [ ! -f ./dist/roulette_dual.hex ]; then echo "DUAL HEX MISSING"; exit 1; fi
-          # Force Jekyll bypass
+          # Force Jekyll bypass inside the firmware folder
           touch ./dist/.nojekyll
 
       - name: Ship to Bunker
