--- a/.github/workflows/deploy_site.yml
+++ b/.github/workflows/deploy_site.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .
-          exclude_assets: '**.ino,**.h,**.yml,README.md,dist,build'
+          # CRITICAL: Exclude the firmware folder from deletion
+          exclude_assets: '**.ino,**.h,**.yml,README.md,dist,build,firmware'
           keep_files: true
           commit_message: "Update: Web Interface"
