--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main", "master" ]
     paths-ignore:
-      - 'firmware/**' # Stop infinite loops (Don't build just because firmware changed)
+      - 'firmware/**' # Prevent infinite loops
   workflow_dispatch:
 
 permissions:
@@ -19,7 +19,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
-      # --- 1. SETUP ENVIRONMENT ---
+      # --- SETUP ---
       - name: Setup Arduino CLI
         uses: arduino/setup-arduino-cli@v1
 
@@ -30,54 +30,70 @@ jobs:
           arduino-cli core update-index
           arduino-cli core install digistump:avr
 
-      # --- 2. COMPILE FIRMWARE ---
-      - name: Compile Firmware
+      # --- BUILD & VALIDATE ---
+      - name: Compile & Inventory
         run: |
-          # Clean old inventory
+          # 1. Clean Inventory
           mkdir -p firmware
           rm -f firmware/*.hex
-          echo "Old firmware removed."
+          echo "Old firmware removed. Starting Fresh."
 
-          # A. SINGLE LED
+          # 2. Compile SINGLE LED
+          echo ">>> COMPILING SINGLE LED..."
           mkdir -p build/single_env/Sketch
           cp TheRevolver.ino build/single_env/Sketch/Sketch.ino
           cp config.h build/single_env/Sketch/config.h
-          # Configure
           sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/config.h
-          # Compile
+          
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
-          # Move
-          find ./build/single -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./firmware/roulette_single.hex \;
+          
+          echo ">>> SINGLE BUILD OUTPUT:"
+          ls -R ./build/single
+          
+          # Careful Extraction
+          # We expect 'Sketch.ino.hex'. If not found, fail.
+          if [ -f "./build/single/Sketch.ino.hex" ]; then
+            cp "./build/single/Sketch.ino.hex" "./firmware/roulette_single.hex"
+          else
+            echo "CRITICAL ERROR: Single Hex not found!"
+            exit 1
+          fi
 
-          # B. DUAL LED
+          # 3. Compile DUAL LED
+          echo ">>> COMPILING DUAL LED..."
           mkdir -p build/dual_env/Sketch
           cp TheRevolver.ino build/dual_env/Sketch/Sketch.ino
           cp config.h build/dual_env/Sketch/config.h
-          # Configure
           sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/config.h
-          # Compile
+          
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
-          # Move
-          find ./build/dual -maxdepth 1 -name "*.hex" ! -name "*bootloader*" -exec cp {} ./firmware/roulette_dual.hex \;
+          
+          if [ -f "./build/dual/Sketch.ino.hex" ]; then
+            cp "./build/dual/Sketch.ino.hex" "./firmware/roulette_dual.hex"
+          else
+            echo "CRITICAL ERROR: Dual Hex not found!"
+            exit 1
+          fi
 
-          echo "Firmware Inventory:"
+          # 4. Final Inventory Check
+          echo ">>> FINAL INVENTORY:"
           ls -l firmware/
+          if [ ! -s firmware/roulette_single.hex ]; then echo "SINGLE HEX EMPTY"; exit 1; fi
+          if [ ! -s firmware/roulette_dual.hex ]; then echo "DUAL HEX EMPTY"; exit 1; fi
 
-      # --- 3. COMMIT BACK TO REPO ---
+      # --- COMMIT BACK ---
       - name: Commit Artifacts
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git add firmware/*.hex
-          # Only commit if changed
           git diff --quiet && git diff --staged --quiet || (git commit -m "Reload: Updated Firmware Artifacts [skip ci]" && git push)
 
-      # --- 4. DEPLOY SITE ---
-      - name: Stage Website
+      # --- DEPLOY SITE ---
+      - name: Stage & Deploy
         run: |
           mkdir -p public
           cp index.html public/index.html
-          # Copy the committed firmware folder to the deploy folder
           cp -r firmware public/firmware
           touch public/.nojekyll
 
