--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main", "master" ]
     paths-ignore:
-      - 'firmware/**' # Prevent infinite loops
+      - 'firmware/**'
   workflow_dispatch:
 
 permissions:
@@ -30,32 +30,31 @@ jobs:
           arduino-cli core update-index
           arduino-cli core install digistump:avr
 
-      # --- BUILD & VALIDATE ---
-      - name: Compile & Inventory
+      # --- BUILD ---
+      - name: Compile Firmware
         run: |
           # 1. Clean Inventory
           mkdir -p firmware
           rm -f firmware/*.hex
-          echo "Old firmware removed. Starting Fresh."
+          echo "Inventory Cleared."
 
           # 2. Compile SINGLE LED
           echo ">>> COMPILING SINGLE LED..."
           mkdir -p build/single_env/Sketch
           cp TheRevolver.ino build/single_env/Sketch/Sketch.ino
-          cp config.h build/single_env/Sketch/config.h
-          sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/config.h
+          cp roulette_cfg.h build/single_env/Sketch/roulette_cfg.h
           
+          # Patch Config
+          sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/roulette_cfg.h
+          
+          # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
           
-          echo ">>> SINGLE BUILD OUTPUT:"
-          ls -R ./build/single
-          
-          # Careful Extraction
-          # We expect 'Sketch.ino.hex'. If not found, fail.
+          # Extract
           if [ -f "./build/single/Sketch.ino.hex" ]; then
             cp "./build/single/Sketch.ino.hex" "./firmware/roulette_single.hex"
           else
-            echo "CRITICAL ERROR: Single Hex not found!"
+            echo "CRITICAL: Single Hex Failed to Build"
             exit 1
           fi
 
@@ -63,26 +62,24 @@ jobs:
           echo ">>> COMPILING DUAL LED..."
           mkdir -p build/dual_env/Sketch
           cp TheRevolver.ino build/dual_env/Sketch/Sketch.ino
-          cp config.h build/dual_env/Sketch/config.h
-          sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/config.h
+          cp roulette_cfg.h build/dual_env/Sketch/roulette_cfg.h
           
+          # Patch Config
+          sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/roulette_cfg.h
+          
+          # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
           
+          # Extract
           if [ -f "./build/dual/Sketch.ino.hex" ]; then
             cp "./build/dual/Sketch.ino.hex" "./firmware/roulette_dual.hex"
           else
-            echo "CRITICAL ERROR: Dual Hex not found!"
+            echo "CRITICAL: Dual Hex Failed to Build"
             exit 1
           fi
 
-          # 4. Final Inventory Check
-          echo ">>> FINAL INVENTORY:"
-          ls -l firmware/
-          if [ ! -s firmware/roulette_single.hex ]; then echo "SINGLE HEX EMPTY"; exit 1; fi
-          if [ ! -s firmware/roulette_dual.hex ]; then echo "DUAL HEX EMPTY"; exit 1; fi
-
       # --- COMMIT BACK ---
-      - name: Commit Artifacts
+      - name: Commit Firmware to Repo
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
@@ -90,7 +87,7 @@ jobs:
           git diff --quiet && git diff --staged --quiet || (git commit -m "Reload: Updated Firmware Artifacts [skip ci]" && git push)
 
       # --- DEPLOY SITE ---
-      - name: Stage & Deploy
+      - name: Stage & Deploy Website
         run: |
           mkdir -p public
           cp index.html public/index.html
