--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main", "master" ]
     paths-ignore:
-      - 'firmware/**'
+      - 'firmware/**' 
   workflow_dispatch:
 
 permissions:
@@ -31,26 +31,36 @@ jobs:
           arduino-cli core install digistump:avr
 
       # --- BUILD ---
-      - name: Compile Firmware
+      - name: Compile Firmware & Fetch Driver
         run: |
           # 1. Clean Inventory
           mkdir -p firmware
           rm -f firmware/*.hex
+          rm -f firmware/*.js
           echo "Inventory Cleared."
 
-          # 2. Compile SINGLE LED
+          # 2. DOWNLOAD DRIVER (Self-Hosting)
+          echo ">>> ACQUIRING DRIVER..."
+          curl -L -o firmware/micronucleus.js https://raw.githubusercontent.com/skandhurkat/micronucleus-web/master/lib/micronucleus.js
+          
+          # Verify Driver
+          if [ -s "firmware/micronucleus.js" ]; then
+            echo "Driver Acquired Successfully."
+          else
+            echo "CRITICAL: Failed to download driver."
+            exit 1
+          fi
+
+          # 3. Compile SINGLE LED
           echo ">>> COMPILING SINGLE LED..."
           mkdir -p build/single_env/Sketch
           cp TheRevolver.ino build/single_env/Sketch/Sketch.ino
           cp roulette_cfg.h build/single_env/Sketch/roulette_cfg.h
           
-          # Patch Config
           sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/roulette_cfg.h
           
-          # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
           
-          # Extract
           if [ -f "./build/single/Sketch.ino.hex" ]; then
             cp "./build/single/Sketch.ino.hex" "./firmware/roulette_single.hex"
           else
@@ -58,19 +68,16 @@ jobs:
             exit 1
           fi
 
-          # 3. Compile DUAL LED
+          # 4. Compile DUAL LED
           echo ">>> COMPILING DUAL LED..."
           mkdir -p build/dual_env/Sketch
           cp TheRevolver.ino build/dual_env/Sketch/Sketch.ino
           cp roulette_cfg.h build/dual_env/Sketch/roulette_cfg.h
           
-          # Patch Config
           sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/roulette_cfg.h
           
-          # Compile
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
           
-          # Extract
           if [ -f "./build/dual/Sketch.ino.hex" ]; then
             cp "./build/dual/Sketch.ino.hex" "./firmware/roulette_dual.hex"
           else
@@ -79,12 +86,12 @@ jobs:
           fi
 
       # --- COMMIT BACK ---
-      - name: Commit Firmware to Repo
+      - name: Commit Artifacts
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add firmware/*.hex
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Reload: Updated Firmware Artifacts [skip ci]" && git push)
+          git add firmware/*
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Reload: Updated Firmware & Driver [skip ci]" && git push)
 
       # --- DEPLOY SITE ---
       - name: Stage & Deploy Website
