--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,8 @@ jobs:
           cp TheRevolver.ino build/single_env/Sketch/Sketch.ino
           cp roulette_cfg.h build/single_env/Sketch/roulette_cfg.h
           
-          sed -i 's/#define DUAL_LED_MODE 1/#define DUAL_LED_MODE 0/' build/single_env/Sketch/roulette_cfg.h
+          # Regex replacement to force MODE 0 regardless of current state
+          sed -i 's/#define DUAL_LED_MODE .*/#define DUAL_LED_MODE 0/' build/single_env/Sketch/roulette_cfg.h
           
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/single build/single_env/Sketch
           
@@ -70,7 +71,8 @@ jobs:
           cp TheRevolver.ino build/dual_env/Sketch/Sketch.ino
           cp roulette_cfg.h build/dual_env/Sketch/roulette_cfg.h
           
-          sed -i 's/#define DUAL_LED_MODE 0/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/roulette_cfg.h
+          # Regex replacement to force MODE 1 regardless of current state
+          sed -i 's/#define DUAL_LED_MODE .*/#define DUAL_LED_MODE 1/' build/dual_env/Sketch/roulette_cfg.h
           
           arduino-cli compile --fqbn digistump:avr:digispark-tiny --output-dir ./build/dual build/dual_env/Sketch
           
